--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,7 +5,8 @@
 
 
 $color-primary: #3498db;
-$color-secondary: #2980b9;
+$color-secondary: rgb(41, 128, 185);
+$color-secondary-opacity: rgba(41, 128, 185, .6)
 
 
 p a {
@@ -28,6 +29,6 @@ p a {
 
 blockquote {
     font-size: 1rem;
-    padding-left: 2rem;
-    border-left: 1px solid $color-secondary;
+    padding-left: 1.5rem;
+    border-left: 5px solid $color-secondary-opacity;
 }
