--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,7 +15,7 @@ p a {
     &:visited {
     color: $color-primary;
     border-bottom: 1px solid transparent; 
-    transition: border-bottom .5s, color .5s;
+    transition: border-bottom .5s leftIn, color .5s ease-in;
     }
 
     &:hover,
@@ -30,4 +30,14 @@ blockquote {
     font-size: 1rem;
     padding-left: 1.5rem;
     border-left: 5px solid $color-secondary-opacity;
+}
+
+@keyframes leftIn {
+    0% {
+        width: 0%;
+    }
+
+    100% {
+        width: 100%;
+    }
 }
