--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,7 +25,7 @@ p a {
     &:visited {
     color: $color-primary;
     border-bottom: 1px solid transparent; 
-    transition: border-bottom .5s leftIn, color .5s ease-in;
+    transition: border-bottom .5s ease-in-out, color .5s;
     }
 
     &:hover,
