--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -30,3 +30,7 @@ blockquote {
     padding-left: 1.5rem;
     border-left: 5px solid $color-secondary-opacity;
 }
+
+ul {
+    list-style-type: none;
+}
