--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,7 +14,7 @@ p a {
     &:visited {
     color: $color-primary;
     border-bottom: 1px solid transparent; 
-    transition: border-bottom .2s ease-in-out, color .2s ease-in-out;
+    transition: .2s ease-in-out;
     }
 
     &:hover,
